<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:elevation="10dp"
            android:background="@color/primary_color_opacity_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="@dimen/margin_16"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/restore_dialog_title"
                    android:textColor="@color/black_pearl"
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold"
                    android:fontFamily="@font/redhatdisplay_bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/restore_dialog_text"
                    android:textColor="@color/black_pearl"
                    android:textSize="@dimen/text_size_16"
                    android:fontFamily="@font/redhatdisplay_medium"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/cancelButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_card_with_stroke"
                        android:layout_marginEnd="@dimen/margin_12"
                        android:textAllCaps="false"
                        android:text="@string/close"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/text_size_18"
                        android:fontFamily="@font/redhatdisplay_bold"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/checkButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_onboard_button_bg"
                        android:layout_marginStart="@dimen/margin_12"
                        android:textAllCaps="false"
                        android:text="@string/gallery"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_18"
                        android:fontFamily="@font/redhatdisplay_bold"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>