<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_folder_permission"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/folder_permission_title"
                android:textColor="@color/black_pearl"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:gravity="center"
                android:fontFamily="@font/redhatdisplay_semi_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bg_card_with_stroke"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dialog_text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/folder_permission_description"
                    android:textColor="@color/black_text"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:fontFamily="@font/redhatdisplay_semi_bold"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_arrow_down"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_arrow_down" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/allowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_positive"
                android:text="@string/folder_permission_allow"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/redhatdisplay_semi_bold"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</layout>